--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@nestjs/platform-express": "^9.0.0",
         "@prisma/client": "^4.10.1",
         "apollo-server-express": "^3.11.1",
+        "class-validator": "^0.14.0",
         "graphql": "^16.6.0",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
