--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # POSTGRES
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=Admin123@
-POSTGRES_DB=nest-graphql
+POSTGRES_USER=prisma
+POSTGRES_PASSWORD=topsecret
+POSTGRES_DB=blog
 
 # Nest run locally
 DB_HOST=localhost
