--- a/package.json
+++ b/package.json
@@ -17,19 +17,31 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "migrate:dev": "prisma migrate dev --preview-feature",
+        "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
+        "migrate:reset": "prisma migrate reset --preview-feature",
+        "migrate:deploy": "npx prisma migrate deploy --preview-feature",
+        "migrate:status": "npx prisma migrate status --preview-feature",
+        "migrate:resolve": "npx prisma migrate resolve --preview-feature",
+        "prisma:studio": "npx prisma studio",
+        "prisma:generate": "npx prisma generate",
+        "prisma:generate:watch": "npx prisma generate --watch"
     },
     "dependencies": {
         "@nestjs/apollo": "^10.2.0",
         "@nestjs/common": "^9.0.0",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/graphql": "^10.2.0",
         "@nestjs/passport": "^9.0.3",
         "@nestjs/platform-express": "^9.0.0",
         "@prisma/client": "^4.10.1",
         "apollo-server-express": "^3.11.1",
+        "bcrypt": "^5.1.0",
         "class-validator": "^0.14.0",
         "graphql": "^16.6.0",
+        "graphql-scalars": "^1.21.3",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
@@ -54,6 +66,7 @@
         "jest": "29.3.1",
         "prettier": "^2.3.2",
         "prisma": "^4.10.1",
+        "prisma-dbml-generator": "^0.10.0",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
         "ts-jest": "29.0.3",
@@ -61,9 +74,6 @@
         "ts-node": "^10.0.0",
         "tsconfig-paths": "4.1.1",
         "typescript": "^4.7.4"
-    },
-    "prisma": {
-        "schema": "databases/prisma/schema.prisma"
     },
     "jest": {
         "moduleFileExtensions": [
