--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # POSTGRES
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=Admin123@
-POSTGRES_DB=nest-graphql
+POSTGRES_USER=prisma
+POSTGRES_PASSWORD=topsecret
+POSTGRES_DB=blog
 
 # Nest run locally
 DB_HOST=localhost
 # Nest run in docker, change host to database container name
 # DB_HOST=postgres
 DB_PORT=5432
-DB_SCHEMA=nestGraphql
+DB_SCHEMA=blog
 
 # Prisma database connection
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=${DB_SCHEMA}&sslmode=prefer
