--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/graphql": "^10.2.0",
+        "@nestjs/jwt": "^10.0.3",
         "@nestjs/passport": "^9.0.3",
         "@nestjs/platform-express": "^9.0.0",
         "@prisma/client": "^4.10.1",
@@ -42,6 +43,7 @@
         "class-validator": "^0.14.0",
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.21.3",
+        "nestjs-prisma": "^0.20.0",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
